# RayTracer

./: .gitignore  CMakeLists.txt  README.md
Camera/: Camera.cpp  Camera.h
Concurrency/: PartialProcessor.cpp  PartialProcessor.h
Exporter/: ExporterManager.cpp  ExporterManager.h  PPMManager.cpp  PPMManager.h
GraphMath/: GraphMath.hpp  Vector3.hpp
Material/: Dielectric.h  Lambertian.h  Material.h  Metal.h
Ray/: Ray.cpp  Ray.h
RayTracer/: RayColor.cpp  RayColor.h  RayTracer.cpp  RayTracer.h
Scene/: Scene.cpp  Scene.h
Shape/: Shape.h  Sphere.cpp  Sphere.h
